added some new packages

--- a/michaelmas/preamble.tex
+++ b/michaelmas/preamble.tex
@@ -8,6 +8,7 @@
 \usepackage{float}
 \usepackage{booktabs}
 \usepackage{enumitem}
+\usepackage{multirow,array}
 \usepackage{tikz-cd}
 
 \pdfminorversion=7
