added some more books and lecture notes

--- a/michaelmas/category_theory/lec_02.tex
+++ b/michaelmas/category_theory/lec_02.tex
@@ -15,4 +15,11 @@
    \end{tikzcd}\]
 \end{definition}
 % subsection Universal Arrows (end)
+
+\subsection{The Yoneda Lemma} % (fold)
+\label{sub:the_yoneda_lemma}
+\begin{proposition}
+\end{proposition}
+
+% subsection The Yoneda Lemma (end)
 % section Universals and Limits (end)
